<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PhoneLoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorSmoke">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGeneral">

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_back"
                android:backgroundTint="@color/colorWhite"
                android:id="@+id/btn_back"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_phone_number_login"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_light"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_sdt"
            style="@style/GeneralBlackFont" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_sdt"
            style="@style/InputText"
            android:inputType="phone"/>


        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_password"
            style="@style/GeneralBlackFont" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            style="@style/InputText"
            android:inputType="textPassword"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_login"
            android:textColor="@color/colorWhite"
            style="@style/LoginButton"
            android:background="@drawable/bg_general_rounded_corners_rectangle"
            android:id="@+id/btn_to_main"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_forgot_pass"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:textColor="@color/colorGeneral"/>

    </LinearLayout>

</LinearLayout>