<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NotificationActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGeneral">

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_back"
                android:backgroundTint="@color/colorWhite"
                android:id="@+id/btn_back"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_notify"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_light"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_mail"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_notify_title"
                android:textSize="17sp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/roboto_medium"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_notify_datetime"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_thin"
                android:drawablePadding="10dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_notify_opener"
                android:textSize="14sp"
                android:textColor="@color/colorFacebook"
                android:fontFamily="@font/roboto_black"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_notify_content"
                android:textSize="13.5sp"
                android:fontFamily="@font/roboto_light"
                android:drawablePadding="10dp"/>
            
        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_update_app_button"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textSize="13sp"
            style="@style/GeneralLightFont"
            android:background="@drawable/bg_general_rounded_corners_rectangle"
            android:id="@+id/btn_to_main"
            android:drawablePadding="5dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>

</LinearLayout>