<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:background="@drawable/bg_main"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_rounded_corners_white_rectangle"
            android:padding="3dp"
            android:src="@drawable/ic_main_logo"
            android:tint="@color/colorGeneral" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="40sp"
            style="@style/MainLogo"
            android:paddingStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/btn_phone_number_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_phone_number_login"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_rounded_corners_rectangle"
            style="@style/LoginButton"
            android:layout_marginBottom="15dp" />

        <Button
            android:id="@+id/btn_google_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_google_login"
            android:background="@drawable/bg_rounded_corners_white_rectangle"
            style="@style/LoginButton"
            android:paddingStart="40dp"
            android:drawableStart="@drawable/ic_google"
            android:layout_marginBottom="15dp"/>


        <Button
            android:id="@+id/btn_facebook_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_facebook_login"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_rounded_corners_fb_rectangle"
            style="@style/LoginButton"
            android:paddingStart="40dp"
            android:drawableStart="@drawable/ic_facebook" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_register_question"
                android:textColor="@color/colorGold"
                android:fontFamily="@font/roboto_light"
                android:textStyle="bold"/>

            <Space
                android:layout_width="3sp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_register"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/roboto_light"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/ic_bottom"/>

</LinearLayout>